--- a/flask/.devcontainer/devcontainer.json
+++ b/flask/.devcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
     "name": "poseify-estimation",
     "build": {
-        "context": "..",
-        "dockerfile": "../Dockerfile"
+        "context": "../app",
+        "dockerfile": "../app/Dockerfile"
     },
     "runArgs": [
         "--gpus", "all",
